fix: currency selection modal is overflown when single language option is enabled

--- a/src/assets/styles/04-components/header.scss
+++ b/src/assets/styles/04-components/header.scss
@@ -222,6 +222,13 @@ salla-user-menu{
   }
 }
 
+//Localization & currency modal overflow fix
+.s-localization-modal-section-inner {
+  max-height: calc(100dvh - 200px);
+  overflow-y: auto;
+  padding-inline: 4px;
+}
+
 
 // Search
 .header-search{
